# pydamiao

./: .gitignore  DM_CAN.py  README.md  README.zh-CN.md  litho.toml  pixi.toml  pyproject.toml
.github/workflows/: publish_to_pypi.yml  test_and_publish.yml
examples/: DM_Motor_Test.py  base.py  basic_usage.py  calibration.py  joints_6x.py  motor_muitl.py  muitl_motor.py  read_reg.py  record.py  refactored_usage.py  replay.py  set_zero.py  single_motor.py
src/pydamiao/: DM_CAN.py  __init__.py  bus.py  driver.py  enums.py  exceptions.py  joint.py  logging.py  manager.py  motor.py  protocol.py  result.py  structs.py  types.py  utils.py
src/pydamiao/arm/: config.py  joint.py  loops.py  recorder.py  tools.py  vis.py
tests/: test_motor_stack.py  test_protocol.py  test_utils.py
